# predictive-autoscaling

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  podman-compose.ml.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
cloud/notes/: CustomDomainSetup.md
cloud/terraform/: iam.tf  network.tf  sagemaker.tf  terraform.sh  terraform.tfstate  terraform.tfstate.backup
k8s/: README.md  cadvisor-daemonset.yaml  deploy.ps1  grafana-deployment.yaml  kustomization.yaml  load-generator-deployment.yaml  namespace.yaml  postgres-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  redis-deployment.yaml  webapp-deployment.yaml
local-setup/: docker-compose.yml  load_generator.Dockerfile  load_generator.py
local-setup/monitoring/: prometheus.yml
local-setup/webapp/: app.py  requirements.txt
notebooks/: exploratory_analysis.ipynb  feature_store.ipynb  model_training.ipynb
sagemaker/terraform/: main.tf  sagemaker.tf
scripts/: README.md  analyze_containers.py  export_config.ini  export_metrics_simple.py  generate_container_mapping.py  train_local.py
scripts/exporters/: demo_targeted_export.py  export_metrics_docker.py  export_metrics_podman.py  export_metrics_targeted.py  export_simple_targeted.py  export_universal.py
src/: __init__.py
src/config/: __init__.py  base_config.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  base_model.py
src/preprocessing/: __init__.py  container_vocabulary.py  (+3 more)
tests/: __init__.py  conftest.py
(+36 files in other folders)
